--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ぽわの練習場</title>
-    <link href="index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header>
@@ -10,6 +10,8 @@
     </header>
     <main>
       <p id="anp">CSS</p>
+      <p id="anp2">CSS</p>
+      <p id="anp3">CSS</p>
     </main>
     <footer></footer>
   </body>
