--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <p id="anp">CSS</p>
       <p id="anp2">CSS</p>
       <p id="anp3">CSS</p>
+      <!--- step4 delay Animation -->
+      <ul>
+        <li><p id="dap1">CSS</p></li>
+        <li><p id="dap2">CSS</p></li>
+        <li><p id="dap3">CSS</p></li>
+      </ul>
     </main>
     <footer></footer>
   </body>
