[add] step5 5 pattarn of timing-function

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         <li><p id="dap2">CSS</p></li>
         <li><p id="dap3">CSS</p></li>
       </ul>
+      <!--- step5 Animation timing function -->
+      <div>
+        <div id="tfa1">ease</div>
+        <div id="tfa2">liner</div>
+        <div id="tfa3">ease-in</div>
+        <div id="tfa4">ease-out</div>
+        <div id="tfa5">ease-in-out</div>
+      </div>
     </main>
     <footer></footer>
   </body>
