[clean] ちょっと整理

--- a/index.html
+++ b/index.html
@@ -9,23 +9,32 @@
       <h2>Hello, meityan!!!!</h2>
     </header>
     <main>
-      <p id="anp">CSS</p>
-      <p id="anp2">CSS</p>
-      <p id="anp3">CSS</p>
+      <section>
+        <h3>Step1~3 KeyFrames</h3>
+        <p id="anp">CSS</p>
+        <p id="anp2">CSS</p>
+        <p id="anp3">CSS</p>
+      </section>
+
       <!--- step4 delay Animation -->
-      <ul>
-        <li><p id="dap1">CSS</p></li>
-        <li><p id="dap2">CSS</p></li>
-        <li><p id="dap3">CSS</p></li>
-      </ul>
+      <section>
+        <h3>Step4 Delay</h3>
+        <ul>
+          <li><p id="dap1">CSS</p></li>
+          <li><p id="dap2">CSS</p></li>
+          <li><p id="dap3">CSS</p></li>
+        </ul>
+      </section>
+
       <!--- step5 Animation timing function -->
-      <div>
+      <section>
+        <h3>Step5 Animation Timing Function</h3>
         <div id="tfa1">ease</div>
         <div id="tfa2">liner</div>
         <div id="tfa3">ease-in</div>
         <div id="tfa4">ease-out</div>
         <div id="tfa5">ease-in-out</div>
-      </div>
+      </section>
     </main>
     <footer></footer>
   </body>
