[add] step6 cubic-bezier

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <div id="tfa4">ease-out</div>
         <div id="tfa5">ease-in-out</div>
       </section>
+
+      <!--- step6 animation-timing-function: cubic-beziier() -->
+      <section>
+        <h3>Step6 [ATF] cubic-bezier</h3>
+        <div id="tfa6">可変</div>
+      </section>
     </main>
     <footer></footer>
   </body>
