[add] step7 [ATF] steps()

--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
         <h3>Step6 [ATF] cubic-bezier</h3>
         <div id="tfa6">可変</div>
       </section>
+
+      <!--- step7 animation-timing-function: steps() -->
+      <section>
+        <h3>Step7 [ATF] steps</h3>
+        <div id="tfa7">jump-none</div>
+        <div id="tfa8">jump-start</div>
+        <div id="tfa9">jump-end</div>
+        <div id="tfa10">jump-both</div>
+
+        <p>
+          <div id="tfa11">attention!</div>
+        </p>
+      </section>
     </main>
     <footer></footer>
   </body>
