[add] step8 animation-directio

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           <div id="tfa11">attention!</div>
         </p>
       </section>
+
+      <!--- step8 animation-direction -->
+      <section>
+        <h3>Step8 animation-direction</h3>
+        <div id="adp1">normal</div>
+        <div id="adp2">reverse</div>
+        <div id="adp3">alternata</div>
+        <div id="adp4">alternate-reverse</div>
+      </section>
     </main>
     <footer></footer>
   </body>
