[add] step9 animation-fill-mode

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
         <div id="adp3">alternata</div>
         <div id="adp4">alternate-reverse</div>
       </section>
+
+      <!--- step9 animation-fill-mode -->
+      <section>
+        <h3>Step9 animation-fill-mode</h3>
+        <div id="afm1">none</div>
+        <div id="afm2">forwards</div>
+        <div id="afm3">backwards</div>
+        <div id="afm4">both</div>
+      </section>
     </main>
     <footer></footer>
   </body>
