[add] Finish basis

--- a/midtest.html
+++ b/midtest.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>ぽわの練習場</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
+  <head></head>
   <body>
     <header>
       <h2>Hello, meityan!!!!</h2>
@@ -13,7 +10,5 @@
         <li><a href="./midtest.html">中間テスト</a></li>
       </nav>
     </header>
-    <main>あいうえお</main>
-    <footer></footer>
   </body>
 </html>
