--- a/midtest.html
+++ b/midtest.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>中間てすと</title>
+    <link rel="stylesheet" href="midtest.css" />
+  </head>
   <body>
     <header>
       <h2>Hello, meityan!!!!</h2>
