[add] add css folder

--- a/kihonn.html
+++ b/kihonn.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>基本</title>
-    <link rel="stylesheet" href="kihonn.css" />
+    <link rel="stylesheet" href="./css/kihonn.css" />
   </head>
   <body>
     <header>
