--- a/midtest.html
+++ b/midtest.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>中間てすと</title>
-    <link rel="stylesheet" href="midtest.css" />
+    <link rel="stylesheet" href="./css/midtest.css" />
   </head>
   <body>
     <header>
