--- a/midtest.html
+++ b/midtest.html
@@ -13,5 +13,37 @@
         <li><a href="./midtest.html">中間テスト</a></li>
       </nav>
     </header>
+    <main>
+      <section>
+        <h3>問1 2秒かけて不透明度が0になる</h3>
+        <h1 id="question1">不透明度</h1>
+      </section>
+
+      <section>
+        <h3>問2 ショートハンド</h3>
+        <h1 id="question2">不透明度</h1>
+      </section>
+
+      <section>
+        <h3>問3 要素2の開始を0.5秒遅らせる</h3>
+        <div id="question3-1">1</div>
+        <div id="question3-2">2</div>
+      </section>
+
+      <section>
+        <h3>問4 時間関数</h3>
+        <div id="question4"></div>
+      </section>
+
+      <section>
+        <h3>問5 再生方向</h3>
+        <h1 id="question5">白黒</h1>
+      </section>
+
+      <section>
+        <h3>問6 終了時の状態</h3>
+        <div id="question6"></div>
+      </section>
+    </main>
   </body>
 </html>
