--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       <h2>Hello, meityan!!!!</h2>
       <nav>
         <li><a href="/">Home</a></li>
-        <li><a href="./kihonn.html">基本</a></li>
+        <li><a href="./kihonn.html">キーフレーム基本</a></li>
         <li><a href="./midtest.html">中間テスト</a></li>
+        <li><a href="./transition.html">transition</a></li>
       </nav>
     </header>
     <main>あいうえお</main>
