--- a/transition.html
+++ b/transition.html
@@ -13,6 +13,7 @@
     </header>
     <main>
       <section>
+        <h3>Step1</h3>
         <button id="tsm1">button</button>
 
         <div>
@@ -20,6 +21,29 @@
           <p class="tsm2">項目2</p>
           <p class="tsm2">項目3</p>
         </div>
+      </section>
+
+      <section>
+        <h3>Step2</h3>
+        <div id="flex_box">
+          <div id="tsm3"></div>
+          <div id="tsm4"></div>
+        </div>
+
+        <div id="transition_box">
+          <div class="tsm5">elm1</div>
+          <div class="tsm5">elm2</div>
+          <div class="tsm5" id="tsm5-1">elm3</div>
+          <div class="tsm5">elm4</div>
+        </div>
+
+        <div id="flex_box2">
+          <div id="tsm6"></div>
+          <div id="tsm7"></div>
+          <div id="tsm8"></div>
+        </div>
+
+        <p><div id="tsm9"></div></p>
       </section>
     </main>
   </body>
